--- a/functionScope.html
+++ b/functionScope.html
@@ -8,11 +8,16 @@
   <body>
 
     <script>
-        function localScope(){
-        let myName = "romesh"
-        var myCity = "gwalior"
+    //     function localScope(){
+    //     let myName = "romesh"
+    //     var myCity = "gwalior"
+    // }
+    // localScope();
+
+    for(let i = 0 ; i < 10; i++){
+      let hello = "romesh"
+      let myCity = "surat"
     }
-    localScope();
 
     </script>
 </body>
