--- a/undoRedo.html
+++ b/undoRedo.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Undo - Redo</title>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Undo - Redo</title>
   <style>
     * {
-      padding: 0px;
-      margin: 0px;
+      padding: 0;
+      margin: 0;
       box-sizing: border-box;
     }
     body {
+      font-size: 10px;
       height: 90vh;
       padding: 2rem;
       background: #ecf0f3;
-
       display: grid;
       place-items: center;
       background-size: 100%;
@@ -23,44 +22,53 @@
     }
     .container {
       width: 100%;
-      aspect-ratio: 0.7;
       padding: 1rem;
       box-shadow: -10px -10px 10px #f8f9fa, 10px 10px 10px #ced1d5;
+      border-radius: 2rem;
+      display: flex;
+      flex-direction: column;
+      gap: 4rem;
     }
     #userInput {
       width: 100%;
       background-color: transparent;
-      border: 0px;
+      border: 0;
       box-shadow: -10px -10px 10px #f8f9fa, 10px 10px 10px #ced1d5;
       outline: none;
       padding: 3rem;
+      border-radius: 2rem 2rem 0 0;
     }
-
     .btn-box {
-      margin-top: 3rem;
       display: flex;
-      justify-content: center;
-      padding: 0.3rem 1rem;
+      flex-direction: column;
       gap: 1rem;
     }
-    #undo,
-    #redo {
+    #undo, #redo {
       border: none;
-      width: 45%;
-      box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset,
-        rgba(207, 203, 203, 0.5) -3px -3px 6px 1px inset;
+      width: 100%;
       height: 3rem;
+      box-shadow: -10px -10px 10px #f8f9fa, 10px 10px 10px #ced1d5;
+      border-radius: 0 0 2rem 2rem;
+    }
+    #undo:hover, #redo:hover {
+      box-shadow: rgb(204, 219, 232) 3px 3px 6px 0 inset,
+                  rgba(207, 203, 203, 0.5) -3px -3px 6px 1px inset;
+    }
+    @media (min-width: 800px) {
+      .container {
+        width: 60%;
+      }
     }
   </style>
-  <body>
-    <div class="container">
-      <textarea id="userInput" placeholder="type something here"></textarea>
-      <div class="btn-box">
-        <button id="undo">Undo</button>
-        <button id="redo">Redo</button>
-      </div>
+</head>
+<body>
+  <div class="container">
+    <textarea id="userInput" placeholder="type something here"></textarea>
+    <div class="btn-box">
+      <button id="undo">Undo</button>
+      <button id="redo">Redo</button>
     </div>
-
-    <script src="script.js"></script>
-  </body>
+  </div>
+  <script src="script.js"></script>
+</body>
 </html>
