--- a/a.html
+++ b/a.html
@@ -1,26 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<style>
-    body{
+    <style>
+      body {
         height: 100vh;
-    }
-    .container{
+        
+      }
+      .container {
         border: 2px solid;
         aspect-ratio: 1;
         height: 80%;
-    }
-</style>
-<body>
+        display: flex;
+        flex-wrap: wrap;
+      }
+    </style>
+  </head>
+  <body>
     <div class="container"></div>
     <script>
-        let box = document.createElement("div");
+      let container = document.querySelector(".container");
 
-        
+      for (let i = 0; i < 35; i++) {
+        let box = document.createElement("div");
+        container.appendChild(box);
+        box.style.border = ".1px solid red";
+        box.style.width = "14%";
+        box.style.aspectRatio = "1";
+        box.className = "boxes";
+      }
+      let boxes = document.getElementsByClassName("boxes");
+      for (let j = 1; j <= 31; j++) {
+        boxes[j+1].innerText = j;
+        // boxes[j].style.backgroundColor = "red";
+      }
     </script>
-</body>
+  </body>
 </html>
